# saddle-camera-top-down-camera

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BWF5kNyP.js  BYHmqJYj.js  BjD7vmK3.js  Cz0LeOXK.js  g7eWHcgj.js
_app/immutable/entry/: app.Bbp01OdJ.js  start.DomRrZr6.js
_app/immutable/nodes/: 0.8oEUHoLi.js  1.D9s7OU09.js  2.kRZqpeN5.js  3.D1rOfDq_.js  4.BNMElVIs.js
demo/arpg_camera/: index.html
demo/basic_2d/: index.html
demo/basic_3d/: index.html
demo/bounds/: index.html
demo/custom_effects/: index.html
demo/lab/: index.html
demo/optional_controls/: index.html
demo/soft_zone_framing/: index.html
demo/strategy_game/: index.html
demo/target_switching/: index.html
demos/arpg_camera/: index.html
demos/basic_2d/: index.html
demos/basic_3d/: index.html
demos/bounds/: index.html
demos/custom_effects/: index.html
demos/lab/: index.html
demos/optional_controls/: index.html
demos/soft_zone_framing/: index.html
demos/strategy_game/: index.html
demos/target_switching/: index.html
docs/: architecture.md  configuration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
examples/: Cargo.toml
examples/arpg_camera/: Cargo.toml
examples/arpg_camera/src/: main.rs
examples/basic_2d/: Cargo.toml
examples/basic_2d/src/: main.rs
examples/basic_3d/: Cargo.toml
examples/basic_3d/src/: main.rs
examples/bounds/: Cargo.toml
examples/bounds/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/custom_effects/: Cargo.toml
examples/custom_effects/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: main.rs
examples/lab/src/e2e/: mod.rs
examples/optional_controls/: Cargo.toml
examples/optional_controls/src/: main.rs
examples/soft_zone_framing/: Cargo.toml
examples/soft_zone_framing/src/: main.rs
examples/strategy_game/: Cargo.toml
examples/strategy_game/src/: main.rs
examples/target_switching/: Cargo.toml
examples/target_switching/src/: main.rs
src/: components.rs  debug.rs  effects.rs  effects_tests.rs  input.rs  input_tests.rs  lib.rs  math.rs  math_tests.rs  plugin_tests.rs  systems.rs  systems_tests.rs
