[package]
name = "saddle-camera-top-down-camera"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-camera-top-down-camera"
license = "MIT-0"
description = "Reusable top-down follow camera with dead zones, smooth tracking, zoom, and bounds for 2D and 3D Bevy scenes"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
