[workspace]
members = [
    "common",
    "basic_2d",
    "basic_3d",
    "bounds",
    "target_switching",
    "soft_zone_framing",
    "optional_controls",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
bevy_enhanced_input = "0.24"
saddle-camera-top-down-camera = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
