[package]
name = "saddle-camera-top-down-camera-example-common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = "0.18"
bevy_enhanced_input = { workspace = true }
saddle-camera-top-down-camera = { path = "../.." }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
