[package]
name = "saddle-camera-top-down-camera-example-custom-effects"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = "0.18"
saddle-camera-top-down-camera = { path = "../.." }
saddle-camera-top-down-camera-example-common = { path = "../common" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
