[package]
name = "saddle-camera-top-down-camera-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
brp = ["dep:bevy_brp_extras", "bevy/bevy_remote"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
bevy_enhanced_input = { workspace = true }
saddle-camera-top-down-camera = { path = "../.." }
saddle-camera-top-down-camera-example-common = { path = "../common" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
